--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,9 @@
         "random": "cpp",
         "string_view": "cpp",
         "numbers": "cpp",
-        "semaphore": "cpp"
-    }
+        "semaphore": "cpp",
+        "xthread": "cpp",
+        "xmemory0": "cpp"
+    },
+    "cmake.configureOnOpen": true
 }
